fix z-index

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,7 @@ body {
     font-family: var(--font-family);
 }
 .header-wrapper {
-    @apply sticky top-0 shadow-md bg-white;
+    @apply sticky top-0 shadow-md bg-white z-[100];
 }
 .header-wrapper[data-hostname="localhost"] {
     @apply bg-sky-100;
